--- a/index.html
+++ b/index.html
@@ -70,8 +70,28 @@
             <p class="paragrafo-projetos">Página de uma cafeteria com design moderno e animações suaves para uma experiência de usuário mais agradável com serviços e localização.</p>
           </div>
         </div>
-
       </a>
+
+      <a href="https://adriano-mendes.github.io/Lanchonete/" target="_blank" class="card-projetos">
+        <div>
+          <img src="./img/projeto 4.png" alt="projeto 4" class="imagem-projetos">
+          <div class="caixa-textos-projeto">
+            <h3 class="info-projetos">Lanchonete</h3>
+            <p class="paragrafo-projetos">Página de uma lanchonete com design moderno e animações suaves para uma experiência de usuário mais agradável.</p>
+          </div>
+        </div>
+      </a>
+
+      <a href="https://adriano-mendes.github.io/Gerador-senha/" target="_blank" class="card-projetos">
+        <div>
+          <img src="./img/projeto 5.png" alt="projeto 5" class="imagem-projetos">
+          <div class="caixa-textos-projeto">
+            <h3 class="info-projetos">Gerador de senha</h3>
+            <p class="paragrafo-projetos">Projeto de gerador de senha no intuito de se criar aleatoriamente uma senha com números e letras para uma maior segurança.</p>
+          </div>
+        </div>
+      </a>
+
     </div>
   </section>
 
