--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
         </div>
       </a>
 
+      <a href="https://adriano-mendes.github.io/Calculadora_IMC/" target="_blank" class="card-projetos">
+        <div>
+          <img src="./img/projeto 6.png" alt="projeto 6" class="imagem-projetos">
+          <div class="caixa-textos-projeto">
+            <h3 class="info-projetos">Calculadora IMC</h3>
+            <p class="paragrafo-projetos">Calculadora de Índice de Massa Corporal para calcular se um indivíduo está no peso ideal</p>
+          </div>
+        </div>
+      </a>
+
     </div>
   </section>
 
